--- a/Day-2/FP-Techniques/FP-Techniques.html
+++ b/Day-2/FP-Techniques/FP-Techniques.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Products</title>
+	<!-- <script src="products.js"></script> -->
+	<script src="functionCallDemo.js"></script>
 </head>
 <body>
 	
